python/testData/quickFixes/PyTypeHintsQuickFixTest/callableTwoElements.py
from typing import Callable

e: Callable[<error descr="'Callable' first parameter must be parameter expression">i<caret>nt</error>, str]